fixed scrollbar + animations

--- a/frontend/loader.css
+++ b/frontend/loader.css
@@ -21,6 +21,22 @@
     display: flex;
     align-items: center;
     position: relative;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.loader_visible{
+    visibility: visible;
+    opacity: 1;
+    transition-duration: 1000ms;
+}
+
+.loader_invisible{
+    width: 0;
+    height: 0;
+    transition: 500ms;
+    visibility: hidden;
+    opacity: 0;
 }
 
 @keyframes loading-banana {
